--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,5 +1,5 @@
 #Set name of properties
-recipe.description=Description
+recipe.description=Description (default)
 
 NotBlank.recipe.description=Description cannot be blank
 Size.recipe.description={0} must be between {2} and {1} characters long
